--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
         environment:
             DEBUG: ${DEBUG}
             RELOAD: ${RELOAD}
+            SECRET_KEY: ${SECRET_KEY}
+            ALGORITHM: ${ALGORITHM}
             API_HOST: ${API_HOST}
             API_PORT: ${API_PORT}
             DB_SERVER: ${MYSQL_SERVER}
