--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.6'
 
 services:
     api:
-        build:
-            context: ./
+        image: cronos_api:latest
+        build: .
         container_name: cronos_api
         restart: always
         volumes:
-            - "./:/usr/local/src/cti"
+            - "./:/usr/local/src/cronos_api"
         ports:
             - "${API_PORT}:${API_PORT}"
         environment:
@@ -17,20 +17,20 @@ services:
             ALGORITHM: ${ALGORITHM}
             API_HOST: ${API_HOST}
             API_PORT: ${API_PORT}
-            DB_SERVER: ${MYSQL_SERVER}
-            DB_USER: ${MYSQL_USER}
-            DB_PASSWORD: ${MYSQL_PASSWORD}
-            DB_HOST: ${MYSQL_HOST}
-            DB_DATABASE: ${MYSQL_DATABASE}
+            DB_SERVER: ${DB_SERVER}
+            DB_USER: ${DB_USER}
+            DB_PASSWORD: ${DB_PASSWORD}
+            DB_HOST: ${DB_HOST}
+            DB_DATABASE: ${DB_DATABASE}
     db:
         image: mariadb:10.9.4
         container_name: cronos_db
         restart: always
         environment:
-            MARIADB_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MARIADB_USER: ${MYSQL_USER}
-            MARIADB_PASSWORD: ${MYSQL_PASSWORD}
-            MARIADB_DATABASE: ${MYSQL_DATABASE}
+            MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+            MARIADB_USER: ${DB_USER}
+            MARIADB_PASSWORD: ${DB_PASSWORD}
+            MARIADB_DATABASE: ${DB_DATABASE}
         volumes:
             - "./db:/var/lib/mysql"
         ports:
