--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
             API_HOST: ${API_HOST}
             API_PORT: ${API_PORT}
             DB_SERVER: ${DB_SERVER}
+            DB_HOST: db
             DB_USER: ${DB_USER}
             DB_PASSWORD: ${DB_PASSWORD}
-            DB_HOST: ${DB_HOST}
             DB_DATABASE: ${DB_DATABASE}
     db:
         image: mariadb:10.9.4
