--- a/.github/workflows/issues-branch-creation.yml
+++ b/.github/workflows/issues-branch-creation.yml
@@ -15,8 +15,9 @@ jobs:
         REPO_OWNER: ${{ github.event.repository.owner.login }}
       run: |
         issue_response=$(curl -s \
+                              -H "Accept: application/vnd.github+json" \
                               -H "Authorization: token $GITHUB_TOKEN" \
-                              -H "Accept: application/vnd.github.v3+json" \
+                              -H "X-GitHub-Api-Version: 2022-11-28" \
                               https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/issues/$ISSUE_NUMBER)
 
         issue_title=$(echo $issue_response | jq -r .title)
